# Mindneedai

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
Docs/: Main.xlsx  MindNeedAI - System Documentation.docx  MindNeedAI Pricing_Strategy.docx  MindNeedAI_Architecture_Diagrams.md  MindNeedAI_Refactor_Architecture.md  MindNeedAI_Technical_Documentation.md  Refactor_Phase_Implementation.md
Docs/Text Analysis/: Testing.docx  Text Analysis (model) .docx  metrics_and_kpi_documentation.docx  metrics_and_kpi_documentation.py  system_flow_documentation.py
Docs/facial_analysis/: VIDEO_ANALYSIS_detailed.md  doc.ipynb  metrics_and_kpi_documentation.docx  metrics_and_kpi_documentation.py  system_flow_documentation.py  video_analysis_doc.ipynb
Docs/speech_analysis/: metrics_and_kpi_documentation.docx  metrics_and_kpi_documentation.py  speech_analysis.ipynb  system_flow_documentation.md
ModelTraining/Facial_analysis/: model_trainig_updated.ipynb  realtime_facial_analysis.py
ModelTraining/speech analysis (facebook wav2vec2 base-latest)/: batch_process.py  requirmeents.txt
client/: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  test-setup.ts
scripts/: seed_db.py
server/: error_handlers.py  exceptions.py  main.py
server/config/: settings.py
server/db/: base.py  session.py
server/middleware/: request_id.py  response_size_limit.py
server/migrations/: env.py
server/security/: audit.py  encryption.py  privacy.py
server/utils/: pagination.py  (+2 more)
(+321 files in other folders)
