[project]
name = "mindneedai-server"
version = "0.1.0"
description = "MindNeedAI FastAPI backend (refactor)"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43",
    "fastapi-limiter>=0.1.6",
    "redis>=5.2",
    "httpx>=0.28",
    "openai>=1.55",
    "tiktoken>=0.8",
    "tenacity>=9.0",
    "aiosmtplib>=3.0",
    "numpy>=2.1",
    "scipy>=1.14",
    "scikit-learn>=1.7.2",
    "opencv-python-headless>=4.10",
    "librosa>=0.10",
    "soundfile>=0.12",
    "loguru>=0.7",
    "sentry-sdk[fastapi]>=2.19",
    "email-validator>=2.3.0",
    "protobuf>=4.25.3,<5",
    "imageio-ffmpeg>=0.6.0",
    "google-generativeai>=0.8.6",
    "pillow>=12.1.1",
    "opencv-python>=4.13.0.92",
    "google-genai>=1.75.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
